--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1692,8 +1692,6 @@ svg.f-light {
   }
 }
 .btn-primary {
-  background-color: #006666 !important;
-  border-color: #006666 !important;
   -webkit-tap-highlight-color: transparent;
   -webkit-transform: translateZ(0);
           transform: translateZ(0);
@@ -1833,8 +1831,8 @@ svg.f-light {
 }
 
 .btn-primary {
-  background-color: var(--theme-deafult) !important;
-  border-color: var(--theme-deafult) !important;
+  background-color: #495f8f !important;
+  border-color: #495f8f !important;
 }
 
 .btn-secondary {
@@ -49692,10 +49690,19 @@ html[dir=rtl] body.dark-only .page-wrapper .page-body-wrapper .page-body .card:n
     width: 67%;
   }
 }
-#filter-button{
+#filter-button {
   display: flex;
   padding: 1px 17px 3px 17px;
   font-size: 1rem;
+}
+.icon svg {
+  width: 1rem;
+  height: 1rem;
+  margin-top: 10px;
+}
+#text {
+  margin-top: 6px;
+  margin-left: 10px;
 }
 /**=====================
   5.9 Box-layout CSS Ends
